--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -3,7 +3,7 @@
 {% block feature_image %}
 {% if page_name == 'index' %}
   <div class="image-wrap">
-  <img src="{{ STATICURL }}/theme/images/home-photo-bw.jpg">
+  <img src="{{ STATICURL }}/theme/images/home-photo-bw.jpg" alt="Home image">
   </div><!-- /.image-wrap -->
 {% endif %}
 {% endblock %}
