--- a/theme/templates/_scripts.html
+++ b/theme/templates/_scripts.html
@@ -1,6 +1,8 @@
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="{{ STATICURL }}/theme/js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
-<script src="{{ STATICURL }}/theme/js/scripts.min.js"></script>
+<!-- Modernizr -->
+<script async src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+<script async src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script async src="{{ STATICURL }}/theme/js/scripts.min.js"></script>
+
 {% if GOOGLE_ANALYTICS %}
 <!-- Asynchronous Google Analytics snippet -->
 <script>
