--- a/theme/templates/article.html
+++ b/theme/templates/article.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
-{% block title %}{{ article.title }} &#8211; {% endblock %}
-{% block summary %}{{ article.summary }}{% endblock %}
-{% block keywords %}{{ article.tags.join(', ') }}{% endblock %}
+{% block title %}{{ article.title }} &#8211; {% endblock title %}
+{% block summary %}{{ article.summary }}{% endblock summary %}
+{% block keywords %}{{ article.tags.join(', ') }}{% endblock keywords %}
 
 {% block feature_image %}
  {% if article.picture %}
@@ -18,7 +18,7 @@
   {% endif %}
   </div><!-- /.image-wrap -->
  {% endif %} 
-{% endblock %}
+{% endblock feature_image %}
 
 {% block content %}
   <article class="post">
@@ -60,14 +60,14 @@
     <section id="disqus_thread"></section><!-- /#disqus_thread -->
   {% endif %}
   </article>
-{% endblock %}
+{% endblock content %}
 
 {% block disqus %}
 {% include '_disqus_comments.html' %}
-{% endblock %}
+{% endblock disqus %}
 
 {% block github %}
 {% if article.github %}
 <a href="https://github.com/{{ article.github }}"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"></a>
 {% endif %}
-{% endblock %}
+{% endblock github %}
