Fix page titles

--- a/theme/templates/_footer.html
+++ b/theme/templates/_footer.html
@@ -1,4 +1,4 @@
 <span>
 &copy;{{ CURRENT_YEAR }} Martin Fitzpatrick. Licensed GPLv3 & BSD.<br />
-Powered by <a href="http://getpelican.compub    ">Pelican</a> using a converted <a href="http://mademistakes.com/minimal-mistakes/">Minimal Mistakes</a> theme.
+Powered by <a href="http://getpelican.com">Pelican</a> using a converted <a href="http://mademistakes.com/minimal-mistakes/">Minimal Mistakes</a> theme.
 </span>
