--- a/theme/templates/_scripts.html
+++ b/theme/templates/_scripts.html
@@ -1,7 +1,7 @@
 <!-- Modernizr -->
-<script async src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
-<script async src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script async src="{{ STATICURL }}/theme/js/scripts.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script src="{{ STATICURL }}/theme/js/scripts.min.js"></script>
 
 {% if GOOGLE_ANALYTICS %}
 <!-- Asynchronous Google Analytics snippet -->
