--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -4,6 +4,7 @@
 <!--[if (IE 8)&!(IEMobile)]><html class="no-js lt-ie9" lang="en"><![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"><!--<![endif]-->
 <head>
+<title>{% block title %}{% endblock %}{{ SITENAME }}</title>
 {% include '_head.html' %}
 </head>
 
@@ -66,5 +67,7 @@
 {% include '_scripts.html' %}
 {% block disqus %}{% endblock disqus %}
 {% block github %}{% endblock github %}
+
+
 </body>
 </html>
