--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -1,5 +1,13 @@
 {% extends 'base.html' %}
 
+{% block title %}
+{% if page_name != 'index' %}
+    {% if category %}{{ category|title }} {% elif tag %}Tagged {{ tag|title }} {% endif %}
+    {% if articles_page and articles_paginator.num_pages > 1 %} ({{ articles_page.number }}) {% endif %}
+ &#8211;
+ {% endif %}
+ {% endblock %}
+
 {% block feature_image %}
 {% if page_name == 'index' %}
   <div class="image-wrap">
@@ -15,7 +23,7 @@
     <article class="{% if article.image %}article-with-image{% endif %}">
         {% if article.image %}
             <a {% if article.link %}href="{{ article.link }}" target="_blank"{% else %}href="{{ SITEURL }}/{{ article.url }}"{% endif %} title="{{ article.title|striptags }}">
-                <img src="{{ article.image }}" class="article-image">
+                <img src="{{ article.image }}" class="article-image" alt="{{ article.title|striptags }}">
             </a>
         {% endif %}
         <h3><a href="{{ SITEURL }}/{{ article.url }}" title="{{ article.title|striptags }}">{{ article.title }}</a> 
