--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -23,7 +23,7 @@
     <article class="{% if article.image %}article-with-image{% endif %}">
         {% if article.image %}
             <a {% if article.link %}href="{{ article.link }}" target="_blank"{% else %}href="{{ SITEURL }}/{{ article.url }}"{% endif %} title="{{ article.title|striptags }}">
-                <img src="{{ article.image }}" class="article-image" alt="{{ article.title|striptags }}">
+                <img src="{{ STATICURL }}/{{ article.image }}" class="article-image" alt="{{ article.title|striptags }}">
             </a>
         {% endif %}
         <h3><a href="{{ SITEURL }}/{{ article.url }}" title="{{ article.title|striptags }}">{{ article.title }}</a> 
