--- a/theme/templates/_open-graph.html
+++ b/theme/templates/_open-graph.html
@@ -28,7 +28,7 @@
   "@context" : "http://schema.org",
   "@type" : "Person",
   "name" : "Martin Fitzpatrick",
-  "url" : "https://martinfitzpatrick.name",
+  "url" : "http://martinfitzpatrick.name",
   "sameAs" : [
    {% for group in SOCIAL %}
      {% for name, icon, url in group %}
