Add link to course on ad-showing pages

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -18,15 +18,17 @@
 {% block ad_top %}
 {% if (page and 'top' in page.ads) or (article and 'top' in article.ads) %}
 <div style="width:540px; margin:auto;">
+<!--
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- Leaderboard -->
 <ins class="adsbygoogle"
      style="display:inline-block;width:728px;height:90px"
      data-ad-client="ca-pub-3287067876809234"
      data-ad-slot="4700067825"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+</script>-->
+
+<img src="{{ STATICURL }}/images/banners/create-simple-gui-applications9.png">
 </div>
 {% endif %}
 
