Add link to course on ad-showing pages

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -26,12 +26,11 @@
      data-ad-slot="4700067825"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
-</script>-->
+</script> -->
 
-<img src="{{ STATICURL }}/images/banners/create-simple-gui-applications9.png">
+<a href="https://www.udemy.com/create-simple-gui-applications-with-python-and-qt/?couponCode=BLOG9" target="_blank"><img src="{{ STATICURL }}/images/banners/create-simple-gui-applications9.png" width="728" height="90"></a>
 </div>
 {% endif %}
-
 {% endblock ad_top %}
 
 <div id="main" role="main">
