--- a/theme/static/css/main.css
+++ b/theme/static/css/main.css
@@ -2065,3 +2065,15 @@ img.large {
 #site-nav li.active a {
     color: #da553b;
 }
+
+.ps {
+    border-top: 1px solid #da553b;
+    border-bottom: 1px solid #da553b;
+    
+    margin: 1.625rem 0;
+    padding: 0.625rem 0;
+    
+}
+.ps a {
+    color: #da553b;
+}
