--- a/theme/templates/article.html
+++ b/theme/templates/article.html
@@ -56,6 +56,10 @@
          
       </footer>
     </div><!-- /.article-wrap -->
+    <div class="ps">
+    <strong>P.S.</strong> If you liked this, you might enjoy my infrequent newsletter,
+    where you can get access to my latest Python courses and ebooks with subscriber discounts! <a href="http://eepurl.com/bNx2Fr">Sign up here</a>.
+    </div>
   {% if DISQUS_SITENAME %}
     <section id="disqus_thread"></section><!-- /#disqus_thread -->
   {% endif %}
