--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -42,14 +42,14 @@
         {% if article.download %}<a href="{{ article.download }}" target="_blank" title="{{ article.title|striptags }}"><i class="fa fa-download"></i></a> {% endif %}
         {% if article.link %}<a href="{{ article.link }}" target="_blank" title="{{ article.title|striptags }}"><i class="fa fa-external-link"></i></a> {% endif %}
 
-        {% if not article.type or article.type and article.type not in ['course','software'] %}
+        {% if not article.type or article.type and article.type not in ['course','software','book'] %}
             <small>{{ article.date.strftime('%d.%m.%Y') }}</small>
         {% endif %}
         </h3>
 
         {% include '_byline.html' %}
 
-        {% if not article.type or article.type not in ['publication', 'poster', 'presentation', 'course'] %}
+        {% if not article.type or article.type not in ['publication', 'poster', 'presentation', 'course','book'] %}
             <p>{{ article.summary|striptags }} <a href="{{ SITEURL }}/{{ article.url }}" title="{{ article.title|striptags }}">More <i class="fa fa-hand-o-right"></i></a></p>
         {% endif %}
         
