--- a/theme/static/css/main.css
+++ b/theme/static/css/main.css
@@ -2002,7 +2002,8 @@ h3 small {
 }
 
 .article-image {
-    max-width: 100%;    
+    max-width: 100%;   
+    margin: 0 auto;
 }
 
 @media only screen and (min-width: 37.5em) {
