--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -28,7 +28,7 @@
 (adsbygoogle = window.adsbygoogle || []).push({});
 <a href="https://www.udemy.com/create-simple-gui-applications-with-python-and-qt/?couponCode=BLOG9" target="_blank"><img src="{{ STATICURL }}/images/banners/create-simple-gui-applications9.png" width="728" height="90"></a>
 </script> -->
-<a href="http://click.linksynergy.com/fs-bin/click?id=HpB9WO9x06M&offerid=323058.827&subid=0&type=4"><IMG border="0"   alt="01192016-15usd-sitewide728x90" src="http://ad.linksynergy.com/fs-bin/show?id=HpB9WO9x06M&bids=323058.827&subid=0&type=4&gridnum=16"></a>
+<a href="http://click.linksynergy.com/fs-bin/click?id=HpB9WO9x06M&offerid=323058.862&subid=0&type=4"><IMG border="0"   alt="Feb2516-19usd-sitewide728X90" src="http://ad.linksynergy.com/fs-bin/show?id=HpB9WO9x06M&bids=323058.862&subid=0&type=4&gridnum=16"></a>
 </div>
 {% endif %}
 {% endblock ad_top %}
