--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -18,7 +18,7 @@
 {% block ad_top %}
 {% if (page and 'top' in page.ads) or (article and 'top' in article.ads) %}
 <div style="width:540px; margin:auto;">
-<!--
+
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
      style="display:inline-block;width:728px;height:90px"
@@ -26,9 +26,7 @@
      data-ad-slot="4700067825"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
-<a href="https://www.udemy.com/create-simple-gui-applications-with-python-and-qt/?couponCode=BLOG9" target="_blank"><img src="{{ STATICURL }}/images/banners/create-simple-gui-applications9.png" width="728" height="90"></a>
-</script> -->
-<a href="http://click.linksynergy.com/fs-bin/click?id=HpB9WO9x06M&offerid=323058.862&subid=0&type=4"><IMG border="0"   alt="Feb2516-19usd-sitewide728X90" src="http://ad.linksynergy.com/fs-bin/show?id=HpB9WO9x06M&bids=323058.862&subid=0&type=4&gridnum=16"></a>
+</script>
 </div>
 {% endif %}
 {% endblock ad_top %}
