--- a/theme/templates/article.html
+++ b/theme/templates/article.html
@@ -34,7 +34,7 @@
 
      {% include '_byline.html' %}
     
-    <div class="article-wrap">
+    <div class="article-wrap {% if article.type %}article-wrap-{{ article.type }}{% endif %}">
       {{ article.content }}
       <hr />
       
@@ -64,7 +64,7 @@
     </div><!-- /.article-wrap -->
     <div class="ps">
     <strong>P.S.</strong> If you liked this, you might enjoy my infrequent newsletter,
-    where you can get access to my latest Python courses and ebooks with subscriber discounts! <a href="http://eepurl.com/bNx2Fr">Sign up here</a>.
+    where you can get access to my latest Python courses and ebooks with discounts! <a href="http://eepurl.com/bNx2Fr">Sign up here</a>.
     </div>
   {% if DISQUS_SITENAME %}
     <section id="disqus_thread"></section><!-- /#disqus_thread -->
