--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -27,16 +27,19 @@
             </a>
         {% endif %}
         <h3><a href="{{ SITEURL }}/{{ article.url }}" title="{{ article.title|striptags }}">{{ article.title }}</a> 
+        {% if article.type %}
+            {% if article.type == 'publication' %}<i class="fa fa-file-text-o" title="Publication"></i> {% endif %}
+            {% if article.type == 'presentation' %}<i class="fa fa-users" title="Presentation"></i> {% endif %}
+            {% if article.type == 'poster' %}<i class="fa fa-file-image-o" title="Poster"></i> {% endif %}
 
-        {% if article.type and article.type == 'publication' %}<i class="fa fa-file-text-o" title="Publication"></i> {% endif %}
-        {% if article.type and article.type == 'presentation' %}<i class="fa fa-users" title="Presentation"></i> {% endif %}
-        {% if article.type and article.type == 'poster' %}<i class="fa fa-file-image-o" title="Poster"></i> {% endif %}
+            {% if article.type == 'course' %}<i class="fa fa-graduation-cap" title="Course"></i> {% endif %}
+            {% if article.type == 'book' %}<i class="fa fa-book" title="Book"></i> {% endif %}
 
-        {% if article.type and article.type == 'course' %}<i class="fa fa-graduation-cap" title="Course"></i> {% endif %}
-        {% if article.type and article.type == 'book' %}<i class="fa fa-book" title="Book"></i> {% endif %}
+            {% if article.type == 'software' %}<i class="fa fa-floppy-o" title="Software"></i> {% endif %}
+            {% if article.type == 'game' %}<i class="fa fa-gamepad" title="Game"></i> {% endif %}
 
-        {% if article.type and article.type == 'software' %}<i class="fa fa-floppy-o" title="Software"></i> {% endif %}
-        {% if article.type and article.type == 'game' %}<i class="fa fa-gamepad" title="Game"></i> {% endif %}
+            {% if article.type == 'notebook' %}<i class="fa fa-file-code-o" title="Notebook"></i> {% endif %}
+        {% endif %}
 
         </a>
         {% if article.download %}<a href="{{ article.download }}" target="_blank" title="{{ article.title|striptags }}"><i class="fa fa-download"></i></a> {% endif %}
