Bring ads into article body; only show in footer
Bring ads into article body; only show in footer

Bring ads into article body; only show in footer

Bring ads into article body; only show in footer

Bring ads into article body; only show in footer

--- a/theme/templates/article.html
+++ b/theme/templates/article.html
@@ -34,6 +34,24 @@
 
      {% include '_byline.html' %}
     
+    
+    {% block ad_top %}
+    {% if (page and 'top' in page.ads) or (article and 'top' in article.ads) %}
+    <div style="width:728px; margin:auto;">
+
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <ins class="adsbygoogle"
+         style="display:inline-block;width:728px;height:90px"
+         data-ad-client="ca-pub-3287067876809234"
+         data-ad-slot="4700067825"></ins>
+    <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+    </div>
+    {% endif %}
+    {% endblock ad_top %}
+    
+    
     <div class="article-wrap {% if article.type %}article-wrap-{{ article.type }}{% endif %}">
       {{ article.content }}
       <hr />
@@ -66,9 +84,26 @@
     <strong>P.S.</strong> If you liked this, you might enjoy my infrequent newsletter,
     where you can get access to my latest Python courses and ebooks with discounts! <a href="http://eepurl.com/bNx2Fr">Sign up here</a>.
     </div>
-  {% if DISQUS_SITENAME %}
+    
+    
+    {% block ad_bottom %}
+    {% if (page and 'bottom' in page.ads) or (article and 'bottom' in article.ads) %}
+    <div style="width:728px; margin:auto;">
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- Leaderboard (bottom) -->
+    <ins class="adsbygoogle"
+         style="display:inline-block;width:728px;height:90px"
+         data-ad-client="ca-pub-3287067876809234"
+         data-ad-slot="1607000620"></ins>
+    <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+    </div>
+    {% endif %}
+    {% endblock ad_bottom %}    
+    
     <section id="disqus_thread"></section><!-- /#disqus_thread -->
-  {% endif %}
+    
   </article>
 {% endblock content %}
 
