--- a/theme/templates/_navigation.html
+++ b/theme/templates/_navigation.html
@@ -1,6 +1,6 @@
 <div class="navigation-wrapper">
     <div class="site-name">
-        <a href="{{ SITEURL }}">{{ SITENAME }} <span class="hilite">MRes</span></a>
+    <a href="{{ SITEURL }}"><span class="l l1">m</span><span class="l l2">f</span><span class="l l3">i</span><span class="l l4">t</span><span class="l l5">z</span><span class="l l6">p</span><span class="l l7"><span class="samcursor">io</span></span></a>
     </div><!-- /.site-name -->
     <div class="top-navigation">
         <nav role="navigation" id="site-nav" class="nav">
