--- a/theme/templates/_footer.html
+++ b/theme/templates/_footer.html
@@ -1,4 +1,3 @@
 <span>
-&copy;{{ CURRENT_YEAR }} Martin Fitzpatrick. Licensed GPLv3 & BSD.<br />
-Powered by <a href="http://getpelican.com">Pelican</a> using a converted <a href="http://mademistakes.com/minimal-mistakes/">Minimal Mistakes</a> theme.
+&copy;{{ CURRENT_YEAR }} Martin Fitzpatrick. Licensed GPLv3 & BSD. Powered by <a href="http://getpelican.com">Pelican</a> using modified <a href="http://mademistakes.com/minimal-mistakes/">Minimal Mistakes</a>.
 </span>
