--- a/theme/templates/_head.html
+++ b/theme/templates/_head.html
@@ -13,6 +13,9 @@
 
 {% if site and site.owner.google.plus %}<link rel="author" href="http://plus.google.com/+{{ site.owner.google.plus }}?rel=author">{% endif %}
 
+<link href='http://fonts.googleapis.com/css?family=Arvo' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+
 <!-- http://t.co/dKP3o1e -->
 <meta name="HandheldFriendly" content="True">
 <meta name="MobileOptimized" content="320">
@@ -28,7 +31,7 @@
 	<script src="{{ SITEURL }}/theme/js/vendor/html5shiv.min.js"></script>
 	<script src="{{ SITEURL }}/theme/js/vendor/respond.min.js"></script>
 <![endif]-->
-
+<link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
 <link href='//fonts.googleapis.com/css?family=Raleway:400,700,400italic' rel='stylesheet' type='text/css'>
 <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" type='text/css'>
 
