--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -8,12 +8,11 @@
 {% include '_head.html' %}
 </head>
 
-<body class="home">
+<body class="home {% block tagstyles %}{% endblock %}">
 
 {% include '_browser-upgrade.html' %}
 
 {% include '_navigation.html' %}
-{% block feature_image %}{% endblock feature_image %}
 
 <div id="main" role="main">
   <div class="article-author-side">
