--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -60,12 +60,12 @@
         {% if articles_page.previous_page_number() == 1 %}
         <a href="{{ SITEURL }}/{{ page_name }}#content">&laquo;</a>
         {% else %}
-        <a href="{{ SITEURL }}/{{ page_name }}{{ articles_page.previous_page_number() }}.html#content">&laquo;</a>
+        <a href="{{ SITEURL }}/{% if page_name %}{{ page_name }}{% else %}index{% endif %}{{ articles_page.previous_page_number() }}.html#content">&laquo;</a>
         {% endif %}
         {% endif %}
         Page {{ articles_page.number }} / {{ articles_paginator.num_pages }}
         {% if articles_page.has_next() %}
-        <a href="{{ SITEURL }}/{{ page_name }}{{ articles_page.next_page_number() }}.html#content">&raquo;</a>
+        <a href="{{ SITEURL }}/{% if page_name %}{{ page_name }}{% else %}index{% endif %}{{ articles_page.next_page_number() }}.html#content">&raquo;</a>
         {% endif %}
         </p>
     {% endif %}
