--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -48,6 +48,8 @@
 
         {% if not article.type or article.type not in ['publication', 'poster', 'presentation', 'course','book'] %}
             <p>{{ article.summary|striptags }} <a href="{{ SITEURL }}/{{ article.url }}" title="{{ article.title|striptags }}">More <i class="fa fa-hand-o-right"></i></a></p>
+        {% else %}
+            <p>{{ article.content }}</p>
         {% endif %}
         
     </article>
