--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -48,7 +48,7 @@
 
         {% if not article.type or article.type not in ['publication', 'poster', 'presentation', 'course','book'] %}
             <p>{{ article.summary|striptags }} <a href="{{ SITEURL }}/{{ article.url }}" title="{{ article.title|striptags }}">More <i class="fa fa-hand-o-right"></i></a></p>
-        {% else %}
+        {% elif article.type in ['publication','poster','presentation'] %}
             <p>{{ article.content }}</p>
         {% endif %}
         
