--- a/theme/templates/tag.html
+++ b/theme/templates/tag.html
@@ -1,2 +1,2 @@
 {% extends "index.html" %}
-{% block title %}{{ tag }} &#8211; {{ SITENAME }}{% endblock %}
+{% block title %}{{ tag }} | {{ SITENAME }}{% endblock %}
