--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -4,7 +4,7 @@
 <!--[if (IE 8)&!(IEMobile)]><html class="no-js lt-ie9" lang="en"><![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"><!--<![endif]-->
 <head>
-<title>{% block title %}{% endblock %}{{ SITENAME }}</title>
+<title>{% block title %}{{ SITENAME }} &#8211; {{ SITESUBTITLE }}{% endblock %}</title>
 {% include '_head.html' %}
 </head>
 
