Update title/subtitle blocks

--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -4,8 +4,11 @@
 {% if page_name != 'index' %}
     {% if category %}{{ category|title }} {% elif tag %}Tagged {{ tag|title }} {% endif %}
     {% if articles_page and articles_paginator.num_pages > 1 %} ({{ articles_page.number }}) {% endif %}
-{% endif %}
 | {{ SITENAME }}
+{% else %}
+{{ SITENAME }} &#8211; {{ SITESUBTITLE }}
+{% endif %}
+
 {% endblock %}
 
 {% block content %}
